--- a/views/products/gunmetal.ejs
+++ b/views/products/gunmetal.ejs
@@ -12,10 +12,10 @@
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
-        <a id='opt' href='/products/gold'> Gold </a><br>
-        <a id='opt' href='/products/silver'> Silver </a><br>
-        <a id='opt' href='/products/rsg'> Rose Gold </a><br>
-        <a id='opt' href='/products/colorful'> Colorful </a><br>
+        <a id='opt' href='/gold'> Gold </a><br>
+        <a id='opt' href='/silver'> Silver </a><br>
+        <a id='opt' href='/rsg'> Rose Gold </a><br>
+        <a id='opt' href='/colorful'> Colorful </a><br>
         <a id='opt' href='/products/show'> All Products </a><br>
         <a id='cart' href='/products/orders'> View Cart </a><br>
       </div>
