--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,10 +12,10 @@
     <div class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='necklaces' href='/products/necklaces'> Necklaces </a><br>
-          <a id='bracelets' href='/products/bracelets'> Bracelets </a><br>
-          <a id='earrings' href='/products/earrings'> Earrings </a><br>
-          <a id='rings' href='/products/rings'> Rings </a><br>
+          <a id='necklaces' href='/necklaces'> Necklaces </a><br>
+          <a id='bracelets' href='/bracelets'> Bracelets </a><br>
+          <a id='earrings' href='/earrings'> Earrings </a><br>
+          <a id='rings' href='/rings'> Rings </a><br>
           <ul>
             <a id='cart' href='/products/orders'> View Cart </a><br>
             <% if (ksUser) { %>
@@ -31,11 +31,11 @@
       <div id='top-options'>
         <div id='gold'>
           <img id='ders' src='images/dersGold.jpeg'>
-          <a id='goldOption' href='/products/metals/gold'> Gold Options </a><br>
+          <a id='goldOption' href='/gold'> Gold Options </a><br>
         </div>
         <div id='silver'>
           <img id='steph' src='images/stephSlv.jpeg'>
-          <a id='silverOption' href='/products/metals/silver'> Silver Options </a><br>
+          <a id='silverOption' href='/silver'> Silver Options </a><br>
         </div>
         <div id='gunmetal'>
           <img id='model' src='images/gunmetal.jpeg'>
@@ -46,11 +46,11 @@
       <div id='bottom-options'>
         <div id='rsg'>
           <img id='meg' src='images/megRsg.jpeg'>
-          <a id='rsgOption' href='/products/metals/rosegold'> Rose Gold Options </a><br>
+          <a id='rsgOption' href='/rosegold'> Rose Gold Options </a><br>
         </div>
         <div id='colorful'>
           <img id='me' src='images/colorful.png'>
-          <a id='colorfulOption' href='/products/metals/colorful'> Colorful Options </a><br>
+          <a id='colorfulOption' href='/colorful'> Colorful Options </a><br>
         </div>
         <div id='allProducts'>
           <img id='boxes' src='images/ksBoxes.jpg'>
