--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -13,11 +13,11 @@
     <div id='nav' class='navbar-fixed'>
       <nav>
         <div class='nav-wrapper'>
-          <a id='opt' href='/products/gold'> Gold </a>
-          <a id='opt' href='/products/rosegold'> Rosegold </a>
-          <a id='opt' href='/products/silver'> Silver </a>
-          <a id='opt' href='/products/gunmetal'> Gunmetal </a>
-          <a id='opt' href='/products/colorful'> Colorful </a>
+          <a id='opt' href='/gold'> Gold </a>
+          <a id='opt' href='/rosegold'> Rosegold </a>
+          <a id='opt' href='/silver'> Silver </a>
+          <a id='opt' href='/gunmetal'> Gunmetal </a>
+          <a id='opt' href='/colorful'> Colorful </a>
           <a id='cart' href='/products/orders'> View Cart </a>
         </div>
       </nav>
