--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,7 +66,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
- 
 }
 
 .navbar-fixed {
@@ -125,7 +124,7 @@ grid-row: 2/3;
 #footer-index {
   grid-row: 4/5;
   grid-column: 1/5;
-  background: url('/images/ksfooter.jpeg') fixed;
+  background: url('/images/ksfooter.jpeg') center;
   height: 200%;
 }
 
@@ -225,6 +224,46 @@ h3 {
 #footer-show {
   grid-row: 7/8;
   grid-column: 1/3;
-  background: url('/images/ksfooter.jpeg') fixed;
+  background: url('/images/ksfooter.jpeg') center;
   height: 200%;
+}
+
+#cart-page {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 5fr 5fr 3fr;
+  margin: 2%;
+  height: 100vh;
+}
+
+#navCart {
+  grid-row: 1/2;
+  grid-column: 1/3;
+}
+
+
+#cartWelcome {
+  display: flex;
+  flex-direction: column;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  margin: 0;
+}
+
+#userName {
+  text-align: center;
+}
+
+#cartContent {
+  grid-row: 3/4;
+  grid-column: 1/3;
+  font-size: 100%;
+  margin: auto;
+}
+
+#footer-cart {
+  grid-row: 4/5;
+  grid-column: 1/3;
+  background: url('/images/ksfooter.jpeg') center;
+  height: 100%;
 }
