--- a/views/products/necklaces.ejs
+++ b/views/products/necklaces.ejs
@@ -12,9 +12,9 @@
   <div id='nav' class='navbar-fixed'>
     <nav>
       <div class='nav-wrapper'>
-          <a id='opt' href='/products/bracelets'> Bracelets </a><br>
-          <a id='opt' href='/products/earrings'> Earrings </a><br>
-          <a id='opt' href='/products/rings'> Rings </a><br>
+          <a id='opt' href='/bracelets'> Bracelets </a><br>
+          <a id='opt' href='/earrings'> Earrings </a><br>
+          <a id='opt' href='/rings'> Rings </a><br>
           <a id='opt' href='/products/show'> All Products </a>
           <a id='cart' href='/products/orders'> View Cart </a>
       </div>
@@ -22,8 +22,28 @@
   </div>
   <div>
     <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
-    <form action='/products/orders/new' method='POST'>
-      <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Customized<br>Price: $55</p>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
+      <input type='hidden' name="price" value='$55'>
+      <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
+      <input type='submit' value='Add To Cart'>
+    </form>
+  </div>
+  <div>
+    <img id='Img' src='/images/gold/gld-brett.png'>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Brett Necklace in Gold'>
+      <input type='hidden' name="price" value='$20'>
+      <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
+      <input type='submit' value='Add To Cart'>
+    </form>   
+  </div>
+  <div>
+    <img id='Img' src='/images/silver/rhod-ember.png'>
+    <form action='/products/addToCart' method='POST'>
+      <input type='hidden' name="item" value='Ember Necklace in Silver'>
+      <input type='hidden' name="price" value='$15'>
+      <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
   </div>
